example/manifest/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorry
  labels:
    app: sorry
    service: sorry
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: sorry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sorry-deployment
  labels:
    app: sorry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sorry
  template:
    metadata:
      labels:
        app: sorry
    spec:
      containers:
        - name: sorry
          # TODO
          image: deployed example image
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "20m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-test
  labels:
    app: client-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-test
  template:
    metadata:
      labels:
        app: client-test
    spec:
      containers:
        - name: client-test
          # TODO
          image: deployed fiddle-faddle image
          args:
            - /app
            - worker
            #- --bufferHost=external-host
            #- --internalHost=internal-host
      serviceAccountName: test-sa
